updated resume and few changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
                         
-                            <a href="https://api.whatsapp.com/send?phone=+918978622362&text=Hello, more information!" target="_blank" class="button button__small button__gray">
+                            <a href="https://api.whatsapp.com/send?phone=+918978622362&text=Hi Abrar, i went through your Portfolio and i want to extend an offer for you !" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-line"></i>
                         </a>
                         <!-- Insert your brand name or profile -->
